--- a/UNIT5.ipynb
+++ b/UNIT5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "f391fb2d",
    "metadata": {},
    "outputs": [
@@ -11,10 +11,10 @@
      "evalue": "No module named 'wikipedia'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwikipedia\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'wikipedia'"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mwikipedia\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'wikipedia'"
      ]
     }
    ],
@@ -63,13 +63,48 @@
     "\n",
     "# Find most similar documents\n",
     "most_similar_docs = np.unravel_index(np.argmax(cosine_sim[np.triu_indices(len(corpus), k=1)]), cosine_sim.shape)\n",
-    "print(f\"\\nMost similar documents are Doc{most_similar_docs[0] + 1} and Doc{most_similar_docs[1] + 1}\")\n"
+    "print(f\"\\nMost similar documents are Doc{most_similar_docs[0] + 1} and Doc{most_similar_docs[1] + 1}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#THIS ARE THE RESULT THAT I RUN IN A DIFFERENT COMPUTER\n",
+    "# Term-Document Matrix (Raw Frequency):\n",
+    "#    000  06681  10  100  100x  106  1098155438  11  110  1174  ...  yukihiro \n",
+    "# 0    0      0   9    0     1    0           1  10    0     0  ...         1   \n",
+    "# 1    0      0   0    0     0    0           0   0    0     0  ...         0   \n",
+    "# 2    1      0   1    0     0    1           0   1    0     1  ...         0   \n",
+    "# 3    4      1   3    1     0    0           0   1    1     0  ...         0   \n",
+    "# 4    0      0   0    0     0    0           0   0    0     0  ...         0   \n",
+    "\n",
+    "#    zealand  zen  zero  zone  zones  zope  φαινίνδα  ἐπίσκυρος  蹴鞠  \n",
+    "# 0        0    2     2     0      0     1         0          0   0  \n",
+    "# 1        0    0     0     0      0     0         0          0   0  \n",
+    "# 2        8    0     0     0      1     0         1          1   1  \n",
+    "# 3        0    0     0     4      0     0         0          0   0  \n",
+    "# 4        0    0     0     0      0     0         0          0   0  \n",
+    "\n",
+    "# [5 rows x 5114 columns]\n",
+    "\n",
+    "# Term-Document Matrix (TF-IDF):\n",
+    "#        000     06681        10       100      100x       106  1098155438  \n",
+    "# 0  0.000000  0.000000  0.014472  0.000000  0.002401  0.000000    0.002401   \n",
+    "# 1  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000    0.000000   \n",
+    "# 2  0.001192  0.000000  0.000989  0.000000  0.000000  0.001477    0.000000   \n",
+    "# 3  0.004824  0.001495  0.003003  0.001495  0.000000  0.000000    0.000000   \n",
+    "# 4  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000    0.000000   \n",
+    "# ...\n",
+    "# Doc4  0.637752  0.430567  0.808665  1.000000   0.0\n",
+    "# Doc5  0.000000  0.000000  0.000000  0.000000   0.0\n",
+    "\n",
+    "# Most similar documents are Doc2 and Doc3\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
