--- a/UNIT5.ipynb
+++ b/UNIT5.ipynb
@@ -41,28 +41,30 @@
     "        print(f\"HTTP Error when fetching {topic}.\")\n",
     "        corpus.append(\"\")  # Append empty string in case of error\n",
     "\n",
-    "# Term-document matrix using raw frequency\n",
-    "vectorizer = CountVectorizer()\n",
-    "raw_frequency_matrix = vectorizer.fit_transform(corpus).toarray()\n",
+    "# 1. (20 points) Using Wikipedia as the corpus, obtain 5 different topics that will serve as your documents\n",
+    "#    and create a term-document matrix.\n",
+    "#    a. Term-document matrix using raw frequency.  \n",
+    "vectorizer = CountVectorizer()  # This part corresponds to creating the term-document matrix using raw frequency.\n",
+    "raw_frequency_matrix = vectorizer.fit_transform(corpus).toarray()  # Creating the raw frequency matrix\n",
     "raw_frequency_df = pd.DataFrame(raw_frequency_matrix, columns=vectorizer.get_feature_names_out())\n",
     "print(\"Term-Document Matrix (Raw Frequency):\")\n",
     "print(raw_frequency_df)\n",
     "\n",
-    "# Term-document matrix using TF-IDF weights\n",
-    "tfidf_vectorizer = TfidfVectorizer()\n",
-    "tfidf_matrix = tfidf_vectorizer.fit_transform(corpus).toarray()\n",
+    "# b. Term-document matrix using TF-IDF weights.\n",
+    "tfidf_vectorizer = TfidfVectorizer()  # This part corresponds to creating the term-document matrix using TF-IDF.\n",
+    "tfidf_matrix = tfidf_vectorizer.fit_transform(corpus).toarray()  # Creating the TF-IDF matrix\n",
     "tfidf_df = pd.DataFrame(tfidf_matrix, columns=tfidf_vectorizer.get_feature_names_out())\n",
     "print(\"\\nTerm-Document Matrix (TF-IDF):\")\n",
     "print(tfidf_df)\n",
     "\n",
-    "# Cosine similarity between documents\n",
-    "cosine_sim = cosine_similarity(tfidf_matrix)\n",
+    "# c. Cosine similarity between documents.\n",
+    "cosine_sim = cosine_similarity(tfidf_matrix)  # This part corresponds to calculating the cosine similarity between documents.\n",
     "cosine_sim_df = pd.DataFrame(cosine_sim, columns=[f\"Doc{i+1}\" for i in range(len(corpus))], index=[f\"Doc{i+1}\" for i in range(len(corpus))])\n",
     "print(\"\\nCosine Similarity Matrix:\")\n",
     "print(cosine_sim_df)\n",
     "\n",
-    "# Find most similar documents\n",
-    "most_similar_docs = np.unravel_index(np.argmax(cosine_sim[np.triu_indices(len(corpus), k=1)]), cosine_sim.shape)\n",
+    "# d. Find most similar documents.\n",
+    "most_similar_docs = np.unravel_index(np.argmax(cosine_sim[np.triu_indices(len(corpus), k=1)]), cosine_sim.shape)  # This part corresponds to finding the most similar documents.\n",
     "print(f\"\\nMost similar documents are Doc{most_similar_docs[0] + 1} and Doc{most_similar_docs[1] + 1}\")\n",
     "\n",
     "\n",
